--- a/css/custom.css
+++ b/css/custom.css
@@ -1170,65 +1170,6 @@ img::-moz-selection {
 }
 
 
-/* toggle */
-
-
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-}
-
-.switch input {display:none;}
-
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-input:checked + .slider {
-  background-color: #2196F3;
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
-}
-
 /* ripple effect */
 
 .BackgroundPreview {    
@@ -1237,6 +1178,8 @@ input:checked + .slider:before {
     border-radius: 8px;
     overflow: hidden;
     box-shadow: rgba(105, 105, 105, 0.42) 0px 0px 10px;
+	-webkit-transition: all 0.1s ease-in;
+	-moz-transition: all 0.1s ease-in;
     transition: all 0.1s ease-in;
     cursor: pointer;
 }
@@ -1247,7 +1190,33 @@ input:checked + .slider:before {
     }
 
     .BackgroundPreview:hover {
-        transform: scale(1.7,1.7);
+        transform: scale(1.5,1.5);
         box-shadow: 0px 0px 37px 3000px rgba(218, 218, 218, 0.42);
+		-webkit-transition: transform 0.1s ease-in-out,box-shadow 1s ease-in-out;
+		-moz-transition: transform 0.1s ease-in-out,box-shadow 1s ease-in-out;
+        transition: transform 0.1s ease-in-out,box-shadow 1s ease-in-out;
+    }
+	
+/* Portfolio zoom effect */
+
+.PortfolioPreview {    
+	border-radius: 8px;  
+    box-shadow: rgba(105, 105, 105, 0.42) 0px 0px 10px;
+	-webkit-transition: all 0.1s ease-in;
+	-moz-transition: all 0.1s ease-in;
+    transition: all 0.1s ease-in;
+    cursor: pointer;
+}
+
+    .PortfolioPreview img {
+        width: 100%;
+        height: 100%;
+    }
+
+    .PortfolioPreview:hover {
+        transform: scale(1.2,1.2);
+        box-shadow: 0px 0px 37px 3000px rgba(218, 218, 218, 0.42);
+		-webkit-transition: transform 0.1s ease-in-out,box-shadow 1s ease-in-out;
+		-moz-transition: transform 0.1s ease-in-out,box-shadow 1s ease-in-out;
         transition: transform 0.1s ease-in-out,box-shadow 1s ease-in-out;
     }
